# flwr-federated

./: Notes.md  Notes.txt  README.md  pyproject.toml  requirements.txt  results.json
scratch_app/: __init__.py  client_app.py  my_strategy.py  server_app.py  task.py
wandb/: latest-run
wandb/run-20250206_004006-z5n4afat/: run-z5n4afat.wandb
wandb/run-20250206_004006-z5n4afat/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250206_004317-5hlimit9/: run-5hlimit9.wandb
wandb/run-20250206_004317-5hlimit9/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
