[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scratch-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hawking"

[tool.flwr.app.components]
serverapp = "scratch_app.server_app:app"
clientapp = "scratch_app.client_app:app"

##-- Hyperparameters --##
[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5 
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
